--- a/app/views/factory/admin/base/_nav.html.erb
+++ b/app/views/factory/admin/base/_nav.html.erb
@@ -1,4 +1,4 @@
-<aside class="menu is-dark" style="height: 100%">
+<aside class="menu is-light" style="height: 100%">
   <%= render 'factory_nav' %>
   <%= render 'trade_nav' %>
 </aside>
