--- a/app/views/factory/admin/part_taxons/_product_tr.html.erb
+++ b/app/views/factory/admin/part_taxons/_product_tr.html.erb
@@ -1,4 +1,4 @@
-<tr id="tr_<%= model.id %>" data-controller="tree_remote show" data-tree_remote-target="item" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="tr_<%= model.id %>" data-controller="tree-remote show" data-tree-remote-target="item" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
     <turbo-frame>
