--- a/app/views/factory/products/_show/_breadcrumb.html.erb
+++ b/app/views/factory/products/_show/_breadcrumb.html.erb
@@ -1,7 +1,6 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('org.admin.departments.index.title'), { controller: 'departments' } %></li>
-    <li><%= link_to '000', { controller: 'departments', action: 'show', id: params[:department_id] } %></li>
+    <li><%= link_to t('factory.products.index.title'), { controller: 'products' } %></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
