--- a/app/views/factory/admin/products/part.html.erb
+++ b/app/views/factory/admin/products/part.html.erb
@@ -1,3 +1,3 @@
-<turbo-frame id="modal">
-  <%= render partial: 'modal_form', locals: { action: 'part' } %>
-</turbo-frame>
+<%= turbo_frame_tagged 'modal' do %>
+  <%= render partial: 'part_form' %>
+<% end %>
