--- a/app/views/factory/admin/productions/price.html.erb
+++ b/app/views/factory/admin/productions/price.html.erb
@@ -1,3 +1,3 @@
-<turbo-frame id="modal">
-  <%= render partial: 'price_form', locals: { action: 'price' } %>
-</turbo-frame>
+<%= turbo_frame_tagged 'modal' do %>
+  <%= render partial: 'price_form' %>
+<% end %>
