--- a/app/views/factory/admin/productions/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index_tbody.html.erb
@@ -1,6 +1,8 @@
 <td>
-  <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
-  <%= model.name %>
+  <div class="is-several">
+    <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
+    <span><%= model.name %></span>
+  </div>
 </td>
 <td>
   <table class="table is-fullwidth is-borderless">
