--- a/app/views/factory/products/_show/_tab_bar.html.erb
+++ b/app/views/factory/products/_show/_tab_bar.html.erb
@@ -9,7 +9,7 @@
     <%= form_with theme: nil, url: { controller: 'trade/my/carts', action: 'add' } do |f| %>
       <%= f.hidden_field :good_type, value: @production.class_name %>
       <%= f.hidden_field :good_id, value: @production.id %>
-      <%= f.submit t('.add'), class: 'weui-btn weui-btn_warn' %>
+      <%= f.submit t('.add'), class: 'weui-btn weui-btn_danger' %>
     <% end %>
   </div>
 </div>
