--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -1,7 +1,7 @@
 <%= render layout: 'index_table', locals: { cache_key: Factory::Product.column_names.hash } do %>
   <% @products.group_by(&:product_taxon).each do |taxon, products| %>
     <tr>
-      <td rowspan="<%= taxon&.products_count.to_i + 1 %>"><%= taxon&.name %></td>
+      <td rowspan="<%= products.size + 1 %>"><%= taxon&.name %></td>
     </tr>
     <%= render partial: 'index_tbody', layout: 'index_tr', collection: products, as: :model %>
   <% end %>
