--- a/app/views/factory/admin/products/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index_tbody.html.erb
@@ -17,7 +17,7 @@
     <i class="fas fa-cube"></i>
   <% end %>
   <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fas fa-clone"></i>
+    <i class="fas fa-clone"></i><span><%= model.productions_count %></span>
   <% end %>
   <%= link_to t('factory.admin.product_plans.index.title'), { controller: 'product_plans', product_id: model.id }, class: 'button is-small is-success' %>
 </td>
