--- a/app/views/factory/products/_index/_tab_bar_item.html.erb
+++ b/app/views/factory/products/_index/_tab_bar_item.html.erb
@@ -1,14 +1,14 @@
-<div data-controller="weui-dialog" data-weui-dialog-id-value="dialog" data-action="click->weui-dialog#toggle" class="weui-tabbar__item">
-  <i class="fa-filter-list weui-tabbar__icon <%= active_helper(controllers: 'products', item: 'fa-light', active: 'fa-light') %>"></i>
-  <div class="<%= active_helper(controllers: 'products', item: 'weui-tabbar__label', active: 'weui-tabbar__label') %>"><%= t('factory.product_taxons.index.title') %></div>
+<div data-controller="weui-dialog" data-weui-dialog-id-value="dialog" data-action="click->weui-dialog#toggle" class="<%= active_helper(controllers: 'products', item: 'weui-tabbar__item', active: 'weui-tabbar__item weui-bar__item_on') %>">
+  <i class="fa-light fa-filter-list weui-tabbar__icon fa-flash"></i>
+  <div class="weui-tabbar__label"><%= t('factory.product_taxons.index.title') %></div>
 </div>
-<%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'weui-tabbar__item') do %>
-  <i class="fa-cart-shopping weui-tabbar__icon <%= active_helper(controllers: 'carts', item: 'fa-light', active: 'fa-solid has-text-success') %>">
+<%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: active_helper(controllers: 'carts', item: 'weui-tabbar__item', active: 'weui-tabbar__item weui-bar__item_on')) do %>
+  <i class="fa-light fa-cart-shopping weui-tabbar__icon">
     <span class="weui-badge" style="right: 1em"><%= current_cart_count %></span>
   </i>
-  <div class="<%= active_helper(controllers: 'carts', item: 'weui-tabbar__label', active: 'weui-tabbar__label has-text-success') %>">购物车</div>
+  <div class="weui-tabbar__label">购物车</div>
 <% end %>
 <%= link_to({ controller: '/my/home', action: 'index' }, class: 'weui-tabbar__item') do %>
-  <i class="fa-user weui-tabbar__icon <%= active_helper(controllers: 'home', item: 'fa-light', active: 'fa-solid has-text-success') %>"></i>
-  <div class="<%= active_helper(controllers: 'home', item: 'weui-tabbar__label', active: 'weui-tabbar__label has-text-success') %>"><%= t('my.home.index.title') %></div>
+  <i class="fa-light fa-user weui-tabbar__icon"></i>
+  <div class="weui-tabbar__label"><%= t('my.home.index.title') %></div>
 <% end %>
