--- a/app/views/factory/products/_index/_tab_bar_cart.html.erb
+++ b/app/views/factory/products/_index/_tab_bar_cart.html.erb
@@ -9,8 +9,10 @@
   </div>
 </div>
 <div class="level-right mt-0 pr-4">
-  <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'level-item') do %>
-    <span>去购物车</span>
-    <i class="fa-solid fa-angle-right"></i>
-  <% end %>
+  <div class="level-item">
+    <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'weui-btn weui-btn_mini weui-btn_primary') do %>
+      <span>去购物车</span>
+      <i class="fa-solid fa-angle-right"></i>
+    <% end %>
+  </div>
 </div>
