--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'index_table', locals: { cache_key: Factory::ProductTaxon.column_names.hash } do %>
+<%= render layout: 'index_sortable_table', locals: { cache_key: Factory::ProductTaxon.column_names.hash } do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_taxons, as: :model %>
 <% end %>
 
