--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -2,7 +2,7 @@
 
 <div class="weui-flex is-align-items-flex-start">
   <%= render 'menu' %>
-  <div class="weui-panel weui-panel_access mt-0 weui-flex__item" data-controller="page" data-page-debug-value="true" data-action="touchmove->page#move:passive touchend->page#end:passive">
+  <div class="weui-panel weui-panel_access mt-0 weui-flex__item" data-controller="page" data-page-debug-value="true" data-action="touchmove->page#move:passive">
     <div class="weui-panel__bd">
       <%= render partial: 'product', collection: @products, as: :model %>
       <%= render 'loading' %>
