--- a/app/views/factory/admin/product_plans/_index_tr.html.erb
+++ b/app/views/factory/admin/product_plans/_index_tr.html.erb
@@ -5,7 +5,7 @@
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-circle-info"></i>
       <% end %>
-      <%= link_to({ controller: 'customs', product_plan_id: model.id }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ controller: 'productions', product_plan_id: model.id }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-cube"></i>
       <% end %>
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
