--- a/app/views/factory/productions/_index/_paginator.html.erb
+++ b/app/views/factory/productions/_index/_paginator.html.erb
@@ -1,1 +1,1 @@
-<div data-page-target="paging" data-total="<%= @products.total_pages %>" data-page="<%= @products.current_page %>"></div>
+<div data-page-target="paging" data-total="<%= @productions.total_pages %>" data-page="<%= @productions.current_page %>"></div>
