--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -4,11 +4,11 @@
   <%= render 'menu' unless params[:produce_plan_id] %>
   <div class="weui-panel weui-panel_access mt-0 weui-flex__item" data-controller="page" data-page-debug-value="true" data-action="touchmove->page#move:passive">
     <div class="weui-panel__bd">
-      <%= render partial: 'product', collection: @products, as: :model %>
+      <%= render partial: 'production', collection: @productions, as: :model %>
       <%= render 'loading' %>
-      <% if @products.total_pages == @products.current_page %>
+      <% if @productions.total_pages == @productions.current_page %>
         <%= render 'no_more' %>
-      <% elsif @products.blank? %>
+      <% elsif @productions.blank? %>
         <%= render 'blank' %>
       <% else %>
         <%= render 'tip' %>
