--- a/app/views/factory/admin/productions/_vip_form.html.erb
+++ b/app/views/factory/admin/productions/_vip_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @production, url: { action: 'update' } do |f| %>
+<%= form_with model: @production, url: { action: 'update_vip' } do |f| %>
   <%= render 'error_messages', target: @production %>
   <% @card_templates.each do |card_template| %>
     <%= f.fields :vip_price do |ef| %>
