--- a/app/views/factory/admin/parts/_form.html.erb
+++ b/app/views/factory/admin/parts/_form.html.erb
@@ -1,5 +1,4 @@
-<%= render 'error_messages', target: @part %>
-<%= render partial: 'com/nodes/outer_select', locals: { f: f, outer: 'part_taxon', node: Factory::PartTaxon.new(organ_id: current_organ&.id) } %>
+<%= render partial: 'com/nodes/outer_select', locals: { f: f, outer: 'part_taxon', node: f.object.part_taxon } %>
 <%= f.text_field :name %>
 <%= f.text_field :qr_prefix %>
 <%= f.number_field :import_price %>
