--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -1,4 +1,9 @@
-<td><%= link_to model.name, { action: 'show', id: model.id }, text: true %></td>
+<td>
+  <%= link_to model.name, { action: 'show', id: model.id }, text: true %>
+  <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fa-light fa-clone"></i><span><%= model.productions_count %></span>
+  <% end %>
+</td>
 <td><%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %></td>
 <td>
   <%= render 'com/attachments/list_many', target: model.covers %>
