--- a/app/views/factory/buy/carts/index.html.erb
+++ b/app/views/factory/buy/carts/index.html.erb
@@ -1,20 +1,5 @@
-<div class="">
-  <% @organs.each do |organ| %>
-  <div class="media">
-    <div class="media-left">
-      <%= image_tag organ.logo.variant(resize_to_limit: [150, 150]), class: 'image' if organ.logo.attached? %>
-    </div>
-    <div class="media-content">
-      <div>
-        <span class="has-grey-text"><%= organ.name %></span>
-      </div>
-      <p><%= organ.address %></p>
-    </div>
-    <div class="media-right">
-      <%= link_to organ.name, my_root_url(host: organ.host), class: 'button is-link' %>
-    </div>
-  </div>
-  <% end %>
+<div class="cards">
+  <%= render partial: 'organ', collection: @organs, as: :organ %>
 </div>
 
 <%= paginate @organ_ids %>
