--- a/app/views/factory/buy/trade_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/buy/trade_items/_index/_index_tbody.html.erb
@@ -1,6 +1,7 @@
 <td><%= model.member.name %></td>
 <td>
-  <span><%= model.good.name %></span>
+  <p class="has-text-primary"><%= model.organ.name %></p>
+  <p><%= model.good.name %></p>
 </td>
 <td><%= model.number %></td>
 <td><%= model.amount %></td>
