--- a/app/views/factory/admin/scenes/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/scenes/_index/_index_tbody.html.erb
@@ -19,12 +19,18 @@
   <p><time><%= model.deliver_finish_at.to_s(:time) %></time></p>
 </td>
 <td>
-  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
-    <%= f.check_box :specialty, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
-    <label data-action="click->input#check"></label>
+  <p>
+  <% if model.specialty %>
+    <i class="fa-light fa-check has-text-success"></i>
+  <% else %>
+    <i class="fa-light fa-times has-text-danger"></i>
   <% end %>
-  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
-    <%= f.check_box :automatic, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
-    <label data-action="click->input#check"></label>
+  </p>
+  <p>
+  <% if model.automatic %>
+    <i class="fa-light fa-check has-text-success"></i>
+  <% else %>
+    <i class="fa-light fa-times has-text-danger"></i>
   <% end %>
+  </p>
 </td>
