--- a/app/views/factory/base/_dialog_scene.html.erb
+++ b/app/views/factory/base/_dialog_scene.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="weui-half-screen-dialog__bd">
     <div class="columns as-border is-flex m-0 p-4">
-      <%= render partial: 'produce_plan', collection: @produce_plans, as: :model %>
+      <%= render partial: 'produce_plan_options', collection: @produce_plans, as: :model %>
     </div>
   </div>
   <div class="weui-half-screen-dialog__ft"></div>
