--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -6,7 +6,7 @@
 </div>
 
 <div class="weui-flex is-align-items-flex-start">
-  <%= render 'menu' unless params[:produce_plan_id] %>
+  <%= render 'menu' unless @produce_plan %>
   <div class="weui-panel weui-panel_access mt-0 weui-flex__item" data-controller="page" data-page-debug-value="true" data-action="touchmove->page#move:passive">
     <div class="weui-panel__bd">
       <%= render partial: 'production', collection: @productions, as: :model %>
