--- a/app/views/factory/buy/home/_produce_plan.html.erb
+++ b/app/views/factory/buy/home/_produce_plan.html.erb
@@ -8,7 +8,7 @@
         <span class="has-text-weight-normal has-text-grey is-size-7"><%= @produce_on.to_s(:week) %></span>
       </div>
       <div class="level-right mt-0">
-        <%= link_to({ controller: '/factory/produce_plans' }) do %>
+        <%= link_to({ controller: 'produce_plans' }) do %>
           <span>更多</span>
           <i class="fa-solid fa-angle-right"></i>
         <% end %>
