--- a/app/views/factory/buy/home/_index/_organ.html.erb
+++ b/app/views/factory/buy/home/_index/_organ.html.erb
@@ -3,14 +3,8 @@
     <%= image_tag organ.logo.variant(resize_to_limit: [150, 150]), class: 'weui-media-box__thumb' if organ.logo.attached? %>
   </div>
   <div class="weui-media-box__bd">
-    <strong class="weui-media-box__title">
-      <%= link_to organ.name, { controller: 'factory/buy/carts', action: 'list', organ_id: organ.id } %>
-    </strong>
+    <strong class="weui-media-box__title"><%= organ.name %></strong>
     <p><%= organ.address %></p>
-    <p>
-    <% organ.nearest_produce_plans.limit(1).each do |produce_plan| %>
-      <%= link_to produce_plan.scene.title, { controller: 'factory/buy/carts', action: 'list', organ_id: organ.id, produce_plan_id: produce_plan.id }, class: 'button is-link' %>
-    <% end %>
-    </p>
+    <p></p>
   </div>
 </div>
