--- a/app/views/factory/productions/_index/_cart.html.erb
+++ b/app/views/factory/productions/_index/_cart.html.erb
@@ -1,4 +1,4 @@
-<% trade_item = current_cart.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) %>
+<% trade_item = current_cart.trade_items.find(&->(i){ i.good_type == model.class_name && i.good_id == model.id && i.produce_on.to_s == params[:produce_on].to_s && i.scene_id.to_s == params[:scene_id].to_s }) %>
 <%= button_to({ controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number - 1 }, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
 <% end if trade_item && trade_item.number > 1 %>
@@ -12,7 +12,8 @@
   <%= f.hidden_field :member_id, value: current_member&.id %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
-  <%= f.hidden_field :produce_plan_id, value: params[:produce_plan_id] %>
+  <%= f.hidden_field :produce_on, value: params[:produce_on] %>
+  <%= f.hidden_field :scene_id, value: params[:scene_id] %>
   <%= button_tag do %>
     <i class="fa-solid fa-circle-plus fa-xl has-text-grey"></i>
   <% end %>
