--- a/app/views/factory/buy/carts/_list/_production.html.erb
+++ b/app/views/factory/buy/carts/_list/_production.html.erb
@@ -19,10 +19,10 @@
       </ul>
       <div>
         <span class="has-text-danger"><%= model.price.to_money.format(html_wrap: true).html_safe %></span>
-        <% if current_cart.card %>
+        <% current_cart.cards.each do |card| %>
         <div class="tags has-addons control m-0" style="display: inline-flex">
-          <div class="tag is-success"><%= current_cart.card.card_template.code %></div>
-          <div class="tag is-light"><%= model.vip_price.fetch(current_cart.card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
+          <div class="tag is-success"><%= card.card_template.code %></div>
+          <div class="tag is-light"><%= model.vip_price.fetch(card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
         </div>
         <% end %>
       </div>
