--- a/app/views/factory/admin/product_taxons/_base/_product_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_product_tbody.html.erb
@@ -1,9 +1,11 @@
 <td>
-  <%= link_to({ action: 'productions', product_id: model.id }) do %>
-    <i class="fa-solid fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree-remote#expand"></i>
-  <% end %>
-  <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
-  <%= model.name %>
+  <div class="is-several">
+    <%= link_to({ action: 'productions', product_id: model.id }) do %>
+      <i class="fa-solid fa-fw fa-caret-right" style="cursor: pointer" data-action="click->tree-remote#expand"></i>
+    <% end %>
+    <%= image_tag model.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.logo.attached? %>
+    <span><%= model.name %></span>
+  </div>
 </td>
 <td><%= model.qr_prefix %></td>
 <td>
