--- a/app/views/factory/admin/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_production.html.erb
@@ -1,10 +1,11 @@
-<tr id="tr_<%= @part_taxon.id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
+<tr id="tr_<%= @product_taxon.id %>_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <td>
-    <span style="width: 1em; display: inline-block"></span>
-    <%= image_tag model.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.product.logo.attached? %>
-    <%= model.name %>
+    <div class="is-several">
+      <span style="width: 1em; display: inline-block"></span>
+      <%= image_tag model.product.logo.variant(resize_to_limit: [24, 24]), class: 'image is-24x24' if model.product.logo.attached? %>
+      <span><%= model.name %></span>
+    </div>
   </td>
-  <td><%= model.product.qr_prefix %></td>
   <td>
     <table class="table is-borderless">
       <% model.parts.each do |part| %>
@@ -23,7 +24,7 @@
         <i class="fa-light fa-times"></i>
       <% end %>
     <% else %>
-      <%= button_to({ controller: 'productions', action: 'provide', product_id: model.product_id, id: model.id, part_taxon_id: @part_taxon.id }, method: :patch, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'productions', action: 'provide', product_id: model.product_id, id: model.id, part_taxon_id: @product_taxon.id }, method: :patch, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-tractor"></i>
       <% end %>
     <% end %>
